# pyatomdb

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  README.rst  calc_power_nei.py
pyatomdb/: COPYING.txt  MANIFEST.in  README.txt  linear_approx.c  make_test_outputs.py  pyproject.toml  setup.py
pyatomdb/docs/: Makefile  apec.rst  atomdb.rst  atomic.rst  conf.py  const.rst  contact.rst  examples.rst  index.rst  installation.rst  license.rst  models.rst  modules.rst  pyatomdb_manual.rst  requirements.txt  rsapec.rst  spectrum.rst  util.rst
pyatomdb/examples/: .rsapec.py.swp  PyAtomDB Demo.ipynb  aciss_meg1_cy22.garf  ah100040030sxs_p0px1010_cl2_HP.pi  ah100040030sxs_p0px1010_ptsrc.arf  apec_example_1_get_ionbal.py  atomdb_example_1_get_data.py  atomdb_example_2_get_maxwell.py  calc_power.py  calc_power_nei.py  first_installation.py  make_line_list.py  make_spectrum.py  new_make_spectrum.py  osc_str.py  output.txt  photoionization_data.py  rsapec.py  rsapec.txt  spectrum_NEIsession_examples.py  spectrum_NEIsession_linelist_examples.py  spectrum_kappa_examples_1.py  spectrum_kappa_examples_2.py  spectrum_session_examples.py  spectrum_session_examples_1.py  spectrum_session_examples_1b.py  spectrum_session_examples_2.py  spectrum_session_examples_2b.py  spectrum_session_examples_3_abund.py  spectrum_session_examples_4_abund.py  spectrum_session_examples_5_linelist.py  spectrum_session_examples_6_line_emissivity.py  spectrum_session_examples_7_nei.py  spectrum_session_examples_8_nei_linelist.py  spectrum_session_linelist_examples.py  wrapper_xspec_examples.py
(+27 files in other folders)
