[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = 'pyatomdb'
dependencies = ["numpydoc", "requests", "wget", "numpy>=1.9.0", "scipy>=1.9.0", "joblib", "mock", "astropy"]
authors = [
  {name = "Adam Foster", email = "afoster@cfa.harvard.edu"}
]
maintainers = [
  {name = "Adam Foster", email = "afoster@cfa.harvard.edu"}
]
description="AtomDB python library."
#url=['http://www.atomdb.org']
#packages=['pyatomdb','tests']

classifiers=["Development Status :: 4 - Beta",
#	     "Environment :: Console",
	     "Intended Audience :: Developers",
	     "Intended Audience :: Education",
	     "Intended Audience :: End Users/Desktop",
	     "Intended Audience :: Science/Research",
	     "Topic :: Scientific/Engineering :: Astronomy",
	     "Topic :: Scientific/Engineering :: Physics",
	     "Programming Language :: Python :: 3",
	     "Operating System :: POSIX"]
 
readme = "README.rst"
license = {file = "COPYING.txt"}
[project.urls]
Homepage = "http://www.atomdb.org"
Documentation = "https://atomdb.readthedocs.io/en/master/"
Repository = "https://github.com/AtomDB/pyatomdb.git"
Issues = "https://github.com/AtomDB/pyatomdb/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "pyatomdb.__version__"}
